# AgentGuard

./: .dockerignore  .env.example  .gitignore  About_Project.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  railway.json
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  pyproject.toml
backend/app/: alembic.ini  api.py  auth.py  config.py  db.py  domain.py  evaluations.py  grounding.py  main.py  mcp_client.py  models.py  orchestrator.py  providers.py  schemas.py  seed.py  tracing.py
backend/app/eval_cases/: grounding_cases.json  injection_cases.json  malicious_cases.json  safe_cases.json
backend/app/migrations/: env.py  script.py.mako
backend/app/security/: __init__.py  policy.py  redaction.py
backend/app/tools/: __init__.py  base.py  document.py  native.py  registry.py
backend/tests/: conftest.py  test_db.py  test_grounding.py  test_mcp_client.py  test_orchestration.py  test_policy.py  test_redaction.py  test_retrieval.py
docs/: architecture.md  design-qa.md  metrics.md  threat-model.md  visual-contract.md
docs/adr/: 0001-owned-orchestration.md  0002-mcp-document-search.md
frontend/: Dockerfile  eslint.config.mjs  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  providers.tsx  run-detail.tsx  ui.test.tsx  ui.tsx  workbench-pages.tsx
mcp_server/: __init__.py  retrieval.py  server.py
mcp_server/documents/: academic_handbook.txt  club_guidelines.txt  course_rules.txt  internship_policy.txt  malicious_handbook_excerpt.txt
(+9 files in other folders)
